Fix Unit Tests